Fix image spacing

--- a/styles/Experience.module.css
+++ b/styles/Experience.module.css
@@ -50,6 +50,10 @@
   padding-left: 0;
 }
 
+.rowImg {
+  justify-self: center;
+}
+
 @media only screen and (max-width: 981px) {
   .rowImg {
     width: 0;
